--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="theme-color" content="#459aac">
 
     <meta name="og:type" content="website">
-    <meta name="og:title" content="Ventispurr Portfolio">
-    <meta name="og:description" content="Ventispurrs Portfolio">
+    <meta name="og:title" content="ventispurr.xyz">
+    <meta name="og:description" content="Hi! I'm ventispurr, I do a ton of different things">
     <meta name="og:url" content="https://ventispurr.xyz">
     <meta name="og:image" content="https://media.discordapp.net/attachments/784872301585760288/919760398524239924/utekipfp.png">
 
