--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta name="og:type" content="website">
     <meta name="og:title" content="ventispurr.xyz">
-    <meta name="og:description" content="Hi! I'm ventispurr, I do a ton of different things">
+    <meta name="og:description" content="Hi! I'm ventispurr, I do a ton of different things. This is my portfolio!">
     <meta name="og:url" content="https://ventispurr.xyz">
     <meta name="og:image" content="https://media.discordapp.net/attachments/784872301585760288/919760398524239924/utekipfp.png">
 
