--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Ventispurr</title>
+    <title>Ventispurr Portfolio</title>
     <link rel="shortcut icon" href="https://media.discordapp.net/attachments/784872301585760288/919760398524239924/utekipfp.png" />
 
     <meta name="description" content="Ven's website" />
