--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Ventispurr Portfolio</title>
     <link rel="shortcut icon" href="https://media.discordapp.net/attachments/784872301585760288/919760398524239924/utekipfp.png" />
 
-    <meta name="description" content="Ven's website" />
-    <meta name="author" content="Vendicated" />
+    <meta name="description" content="Ventispurr's website" />
+    <meta name="author" content="Ventispurr" />
 
     <meta name="theme-color" content="#459aac">
 
