--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Ventispurr's website" />
     <meta name="author" content="Ventispurr" />
 
-    <meta name="theme-color" content="#459aac">
+    <meta name="theme-color" content="#867389">
 
     <meta name="og:type" content="website">
     <meta name="og:title" content="ventispurr.xyz">
