--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 
     <meta name="theme-color" content="#867389" />
 
-    <meta name="og:type" content="website">
-    <meta name="og:title" content="ventispurr.xyz">
-    <meta name="og:description" content="Hi! I'm ventispurr, I do a ton of different things. This is my portfolio!">
-    <meta name="og:url" content="https://ventispurr.xyz">
-    <meta name="og:image" content="https://media.discordapp.net/attachments/784872301585760288/919760398524239924/utekipfp.png">
+    <meta content="Ventispurr Portfolio" property="og:title">
+	<meta content="Hello! I'm Ventispurr! I sometimes program.. and well.. this is something I made! My Portfolio!" property="og:description">
+	<meta content="https://ventispurr.xyz" property="og:url">
+	<meta content="https://ventispurr.github.io/Links/utekipfp.jpg" property="og:image">
 
     <link rel="stylesheet" href="css/index.css" />
 
