--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta content="Ventispurr Portfolio" property="og:title">
 	<meta content="Hello! I'm Ventispurr! I sometimes program.. and well.. this is something I made! My Portfolio!" property="og:description">
 	<meta content="https://ventispurr.xyz" property="og:url">
-	<meta content="https://ventispurr.github.io/Links/utekipfp.jpg" property="og:image">
+	<meta content="https://ventispurr.github.io/ventispurrlinks/utekipfp.jpg" property="og:image">
 
     <link rel="stylesheet" href="css/index.css" />
 
