--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main id="home" class="main-body">
         <div id="home-header">
-            <img id="avatar" src="https://media.discordapp.net/attachments/784872301585760288/919760398524239924/utekipfp.png?size=256">
+            <img id="avatar" src="assets/ULcatSkylor.jpg?size=256">
             <h2 id="hey">Hello there! I'm Ventispurr!</h2>
         </div>
 
