--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <meta name="theme-color" content="#867389" />
 
-    <meta content="Ventispurr Portfolio" property="og:title">
+    <meta content="ventispurr.xyz" property="og:title">
 	<meta content="Hello! I'm Ventispurr! I sometimes program.. and well.. this is something I made! My Portfolio!" property="og:description">
 	<meta content="https://ventispurr.xyz" property="og:url">
-	<meta content="https://ventispurr.github.io/ventispurrlinks/utekipfp.jpg" property="og:image">
+	<meta content="https://ventispurr.github.io/ventispurr.xyz/assets/ULcatSkylor.jpg" property="og:image">
 
     <link rel="stylesheet" href="css/index.css" />
 
