--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                 <img class="social-img" src="assets/github.svg" />
                 <p class="social-tooltip">Github</p>
             </a>
+            <a class="social" href="https://instagram.com/ventispurr/">
+                <img class="social-img" src="assets/instagram.png" />
+                <p class="social-tooltip">Instagram</p>
+            </a>
         </div>
     </main>
 
