--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <footer>
         <p>
-            Copyright (C) 2021 <a href="https://github.com/ventispurr">Ventispurr</a>
+		Stolen from <a href="https://github.com/Vendicated/vendicated.dev">Ven, thx bby<3</a> <a href="https://github.com/Ventispurr/ventispurr.xyz">Source</a>
         </p>
     </footer>
     <script defer src="js/index.js"></script>
