added comfypichu theme to projects

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </section>
 
             <section class="project-widget">
-                <div class="project-widget-header blue-card">
+                <div class="project-widget-header orange-card">
                     <img class="project-widget-icon ic-project-pc-plugs" src="assets/ventisgame.png?size=256">
                     <div class="project-widget-title">
                         <h3>Venti's WebGame</h3>
@@ -176,6 +176,27 @@
                 </div>
                 <div class="project-widget-body">
                     <p>Where links to all my stuff are!</p>
+                </div>
+            </section>
+	
+	   <section class="project-widget">
+                <div class="project-widget-header blue-card">
+                    <img class="project-widget-icon" src="https://media.discordapp.net/attachments/784872301585760288/921960711981248552/unknown.png">
+                    <div class="project-widget-title">
+                        <h3>ComfyPichu Theme</h3>
+                        <p><i>ComfyPichu Theme for Betterdiscord</i></p>
+                    </div>
+                    <div class="project-widget-spacer"></div>
+                    <a class="project-widget-launch" href="https://github.com/Ventispurr/ComfyPichu">
+                        <svg width="26pt" height="26pt" viewBox="0 0 26 26">
+                            <path
+                                d="M 20.582031 19.792969 L 5.417969 19.792969 L 5.417969 5.207031 L 13 5.207031 L 13 3.125 L 5.417969 3.125 C 4.214844 3.125 3.25 4.0625 3.25 5.207031 L 3.25 19.792969 C 3.25 20.9375 4.214844 21.875 5.417969 21.875 L 20.582031 21.875 C 21.773438 21.875 22.75 20.9375 22.75 19.792969 L 22.75 12.5 L 20.582031 12.5 Z M 15.167969 3.125 L 15.167969 5.207031 L 19.058594 5.207031 L 8.40625 15.449219 L 9.933594 16.917969 L 20.582031 6.675781 L 20.582031 10.417969 L 22.75 10.417969 L 22.75 3.125 Z M 15.167969 3.125 " />
+                        </svg>
+                    </a>
+                </div>
+                <div class="project-widget-body">
+                    <p>Mixture of Ushies <a href="https://github.com/Ushie/Comfypichu">ComfyPichu</a> theme and Nyria's <a href="https://github.com/NYRI4/LilyPichu">LilyPichu</a> theme
+</p>
                 </div>
             </section>
         </div>
