--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         </section>
 
         <section>
-            I like taking open source products that you can use, and use that to help me make my projects, I also live on discord. 
+            I like taking open source products that you can use, and use that to help me make my projects, I also live on discord. And im MADLY Inlove with my girlfriend Rachy<3
+shes adorable
         </section>
 
         <div id="socials">
