--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </a>
                 </div>
                 <div class="project-widget-body">
-                    <p>A nice and friendly discord community that I help run!</a></p>
+                    <p>Easily useable on replit!</a></p>
                 </div>
             </section>
 
