--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                 <img class="social-img" src="assets/instagram.png" />
                 <p class="social-tooltip">Instagram</p>
             </a>
+		<a class="social" href="https://twitter.com/ventispurr">
+                <img class="social-img" src="assets/twitter.png" />
+                <p class="social-tooltip">Twitter</p>
+            </a>
         </div>
     </main>
 
