--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <section>
-            I don't do much, I like to program when I have free time and play video games
+            I don't do much, I program, i'm also dangerously addicted to rhythm games and coffee
         </section>
 
         <section>
