--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main id="home" class="main-body">
         <div id="home-header">
             <img id="avatar" src="assets/raphtaliagif.gif?size=256">
-            <h2 id="hey">Waddup Brah? I'm Ventispurr!</h2>
+            <h2 id="hey">こんにちは私は大きなペニスを持っています, I'm Ventispurr!</h2>
         </div>
 
         <section>
