--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <img class="project-widget-icon ic-project-pc-plugs" src="assets/ventisgame.png?size=256">
                     <div class="project-widget-title">
                         <h3>Venti's WebGame</h3>
-                        <p><i>My small web game that I made with a nice ending</i></p>
+                        <p><i>My small web game that I made with a nice and emotional ending</i></p>
                     </div>
                     <div class="project-widget-spacer"></div>
                     <a class="project-widget-launch" href="https://ventispurr.github.io/WebGames/">
