--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     
     <footer>
         <p>
-		Stolen from <a href="https://github.com/Vendicated/vendicated.dev">Ven, thx bby <3</a> | <a href="https://github.com/Ventispurr/ventispurr.xyz">Source</a>
+		Stolen from Ven, thx bby <3 | <a href="https://github.com/Ventispurr/ventispurr.xyz">Source</a>
         </p>
     </footer>
     <script defer src="js/index.js"></script>
