--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 disabled. Please enable javascript to <a href="js/index.js">make it function</a></p>
             <li id="nav-home" class="nav-item nav-item-selected"><a href="#home">Home</a></li>
             <li id="nav-projects" class="nav-item"><a href="#projects">Projects and Stuff</a></li>
-            <li id="nav-downloads" class="nav-item"><a href="#downloads">Downloads</a></li>
+            <li id="nav-downloads" class="nav-item"><a href="/downloads">Downloads</a></li>
         </ul>
     </header>
 
