--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         <p><i></i></p>
                     </div>
                     <div class="downloads-widget-spacer"></div>
-                    <a class="downloads-widget-launch" href="https://m.majorgeeks.com/index.php?ct=files&action=download&">
+                    <a class="downloads-widget-launch" href="assets/rkill64.exe">
                         <svg width="26pt" height="26pt" viewBox="0 0 26 26">
                             <path
                                 d="M 20.582031 19.792969 L 5.417969 19.792969 L 5.417969 5.207031 L 13 5.207031 L 13 3.125 L 5.417969 3.125 C 4.214844 3.125 3.25 4.0625 3.25 5.207031 L 3.25 19.792969 C 3.25 20.9375 4.214844 21.875 5.417969 21.875 L 20.582031 21.875 C 21.773438 21.875 22.75 20.9375 22.75 19.792969 L 22.75 12.5 L 20.582031 12.5 Z M 15.167969 3.125 L 15.167969 5.207031 L 19.058594 5.207031 L 8.40625 15.449219 L 9.933594 16.917969 L 20.582031 6.675781 L 20.582031 10.417969 L 22.75 10.417969 L 22.75 3.125 Z M 15.167969 3.125 " />
