--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#867389" />
 
     <meta content="ventispurr.xyz" property="og:title">
-	<meta content="Hello! I'm Ventispurr! I sometimes program.. and well.. this is something I made! My Portfolio!" property="og:description">
+	<meta content="Hello! I'm Ventispurr! This is for the Nico Knows Tech malware removal :)" property="og:description">
 	<meta content="https://ventispurr.xyz" property="og:url">
 	<meta content="https://ventispurr.github.io/ventispurr.xyz/assets/yesthis.png" property="og:image">
 
