--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main id="home" class="main-body">
         <div id="home-header">
-            <img id="avatar" src="assets/idkanymore.jpg?size=256">
+            <img id="avatar" src="https://media.discordapp.net/attachments/784872301585760288/944197027221372968/unknown.png">
             <h2 id="hey">Ventispurr</h2>
         </div>
 
