--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta content="ventispurr.xyz" property="og:title">
 	<meta content="Hello! I'm Ventispurr! This is for the Nico Knows Tech malware removal :)" property="og:description">
 	<meta content="https://ventispurr.xyz" property="og:url">
-	<meta content="https://media.discordapp.net/attachments/784872301585760288/944197027221372968/unknown.png" property="og:image">
+	<meta content="https://images-ext-1.discordapp.net/external/C8rVS1UJsXLOW9TLxQ7Ky7476uugGmw3Tx7X-DQVXWs/https/ventispurr.github.io/ventispurr.xyz/assets/yesthis.png" property="og:image">
 
     <link rel="stylesheet" href="css/index.css" />
 
