--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta name="theme-color" content="#867389" />
 
-    <meta content="ventispurr.xyz" property="og:title">
+    <meta content="its.ven.rip" property="og:title">
 	<meta content="Hello! I'm Ventispurr! This is for the Nico Knows Tech malware removal :)" property="og:description">
 	<meta content="https://ventispurr.xyz" property="og:url">
 	<meta content="https://images-ext-1.discordapp.net/external/C8rVS1UJsXLOW9TLxQ7Ky7476uugGmw3Tx7X-DQVXWs/https/ventispurr.github.io/ventispurr.xyz/assets/yesthis.png" property="og:image">
